--- a/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json
+++ b/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json
@@ -32,7 +32,7 @@
             "script": "new/new_app_icon.cocoascript"
         },
         {
-            "name": "New System Icon",
+            "name": "Add System Icon Grid Line",
             "identifier": "new_system_icon",
             "script": "new/new_system_icon.cocoascript"
         },
@@ -59,13 +59,18 @@
         {
             "name": "Asset Name Validator",
             "identifier": "asset_name_validator",
-            "script": "export/asset_name_validator.cocoascript"
+            "script": "utilities/asset_name_validator.cocoascript"
+        },
+        {
+            "name": "Fixes Slice Names",
+            "identifier": "fixes_slice_name",
+            "script": "utilities/fixes_slice_name.cocoascript"
         },
         {
             "name": "Web Site",
             "identifier": "web_site",
             "handler": "website",
-            "script": "Utilities/utilities.cocoascript"
+            "script": "utilities/utilities.cocoascript"
         },
         {
             "name": "Report Issues",
@@ -84,21 +89,9 @@
             "script": "utilities/update.cocoascript"
         },
         {
-            "name": "Donate via PayPal",
-            "identifier": "donate_via_paypal",
-            "handler": "donateViaPaypal",
-            "script": "utilities/utilities.cocoascript"
-        },
-        {
-            "name": "Donate via WeChat",
-            "identifier": "donate_via_wechat",
-            "handler": "donateViaWechat",
-            "script": "utilities/utilities.cocoascript"
-        },
-        {
-            "name": "Donate via Alipay",
-            "identifier": "donate_via_alipay",
-            "handler": "donateViaAlipay",
+            "name": "Donate",
+            "identifier": "donate",
+            "handler": "donate",
             "script": "utilities/utilities.cocoascript"
         }
     ],
@@ -106,33 +99,35 @@
         "isRoot": false,
         "title": "Android Res Export",
         "items": [
-            "new_app_icon",
-            "new_system_icon",
-            "-",
             "new_png_asset",
             "new_nine_patch_asset",
             "new_vector_drawable_asset",
+            "new_app_icon",
             "-",
             "export_assets",
             "export_nine_patch",
             "export_vector_drawable",
             "export_app_icon",
             "-",
-            "asset_name_validator",
+            {
+                "title": "Utilities",
+                "items": [
+                    "new_system_icon",
+                    "asset_name_validator",
+                    "fixes_slice_name"
+                ]
+            },
             "-",
             {
                 "title": "Help",
                 "items": [
                     "web_site",
                     "report_issues",
-                    "-",
                     "update",
                     "-",
                     "change_language",
                     "-",
-                    "donate_via_paypal",
-                    "donate_via_wechat",
-                    "donate_via_alipay"
+                    "donate"
                 ]
             }
         ]
