--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -2,9 +2,9 @@ description: Export Android resources, like pngs, nine-patch, app icon and vecto
 new_png_asset: New PNG Asset
 new_nine_patch_asset: New Nine-Patch Asset
 new_app_icon: New App Icon
-new_system_icon: Add System Icon Grid Line
+add_system_icon: Add System Icon Grid Line
 new_vector_drawable_asset: New Vector Drawable Asset
-export_assets: Export PNG Assets
+export_png_assets: Export PNG Assets
 export_vector_drawable: Export Vector Drawables
 export_nine_patch: Export Nine-Patch Assets
 export_app_icon: Export App Icon
