--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -6,7 +6,7 @@
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "manifestURL": "https://github.com/Ashung/Android_Res_Export/raw/master/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json",
     "downloadURL": "https://github.com/Ashung/Android_Res_Export/archive/master.zip",
-    "version": "2.0.1",
+    "version": "2.1.0",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "3",
     "bundleVersion": "1",
@@ -67,6 +67,11 @@
             "script": "utilities/fixes_slice_name.cocoascript"
         },
         {
+            "name": "Preferences",
+            "identifier": "preferences",
+            "script": "utilities/preferences.cocoascript"
+        },
+        {
             "name": "Web Site",
             "identifier": "web_site",
             "handler": "website",
@@ -117,6 +122,8 @@
                     "fixes_slice_name"
                 ]
             },
+            "-",
+            "preferences",
             "-",
             {
                 "title": "Help",
