--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -62,14 +62,14 @@ no_duplicate_and_invaild_asset_name: No duplicate and invaild asset name.
 select_app_icon_artboard: Please selected the app icon artboard or symbol master.
 app_icon_artboard_tips: Your icon must in an artboard or symbol master, and the size must be 192x192px.
 
-install_imagemagick_title: You have not install ImageMagick.
+install_imagemagick_title: Please check that you have ImageMagick installed.
 install_imagemagick_message: |-
     Export Android nine-patch image feature depend on ImageMagick library.
     Install use HomeBrew:
     $ brew install ImageMagick
 no_nine_patch_asset: No any nine-patch asset.
 
-install_svg_and_s2v_title: You have not install SVGO and svg2vectordrawable.
+install_svg_and_s2v_title: Please check that you have SVGO and svg2vectordrawable installed.
 install_svg_and_s2v_message: |-
     Export Android vector drawable feature depend on Node.js, SVGO and svg2vectordrawable.
     After you installed Node.js, run follow command in the Terminal.
