--- a/templates/language_zh_cn.yaml
+++ b/templates/language_zh_cn.yaml
@@ -62,18 +62,18 @@ no_duplicate_and_invaild_asset_name: 无重复和不合法资源命名。
 select_app_icon_artboard: 请选中应用图标的画板或组件模版。
 app_icon_artboard_tips: 图标必须在画板或组件模版内，并且画板或组件模版的尺寸为 192x192 像素。
 
-install_imagemagick_title: 没有安装 ImageMagick。
+install_imagemagick_title: 请检查是否安装 ImageMagick。
 install_imagemagick_message: |-
     导出 Android 九宫格文件功能依赖于 ImageMagick 库。
-    通过 HomeBrew 安装:
-    $ brew install ImageMagick
+    通过 HomeBrew 安装,
+    brew install ImageMagick
 no_nine_patch_asset: 无任何九宫格文件资源。
 
-install_svg_and_s2v_title: 没有安装 SVGO 和 svg2vectordrawable。
+install_svg_and_s2v_title: 请检查是否安装 SVGO 和 svg2vectordrawable。
 install_svg_and_s2v_message: |-
     导出 Android 可绘制矢量文件功能需要安装 Node.js，SVGO 和 svg2vectordrawable。
     在安装完 Node.js 之后, 在终端运行以下命令。
-    $ npm install -g svgo svg2vectordrawable
+    npm install -g svgo svg2vectordrawable
 no_vector_drawable_asset: 无任何可绘制矢量资源。
 
 show_in_finder_after_export: 导出资源后在 Finder 中显示。
