- Fixed bug when add png asset to Artboard. - Can't add nine-patch from Artboard or Symbol Master. - When export nine-patch the patch lines will round to pixel.

--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -4,9 +4,10 @@
     "author": "Ashung Hung",
     "email": "Ashung.hung@gmail.com",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
+    "appcast": "https://ashung.github.io/Android_Res_Export/appcast.xml",
     "manifestURL": "https://github.com/Ashung/Android_Res_Export/raw/master/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json",
     "downloadURL": "https://github.com/Ashung/Android_Res_Export/archive/master.zip",
-    "version": "2.1.4",
+    "version": "2.1.6",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "3",
     "bundleVersion": "1",
@@ -122,6 +123,7 @@
             "export_nine_patch",
             "export_vector_drawable",
             "export_app_icon",
+            "export_shape_xml",
             "-",
             {
                 "title": "Utilities",
