--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,4 +1,8 @@
 
+-   title: v2.1.6
+    version: 2.1.6
+    commitID: cddbcb640d8de8d9b26ff9742b45970fb36057dd
+
 -   title: v2.1.5
     version: 2.1.5
     commitID: 12e3ba58833de5c551f84c7bd134cc33685e3c54
