--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -84,3 +84,10 @@ no_vector_drawable_asset: No any vector drawable asset.
 
 show_in_finder_after_export: Show in Finder After Export.
 use_imageoptim_after_export: Optimize Images use ImageOptim After Export.
+
+export_shape_xml: Export Shape Drawable XML
+too_many_color_stop: The gradient in Android shape drawable not support greater than 3 colors.
+no_support_fill_type: The fill type is not support for Android shape drawable.
+no_support_stroke_type: The stroke type is not support for Android shape drawable.
+no_support_shape: Only support shape layer like rectangle or oval.
+no_shape_layer: Please choose one shape layer like rectangle or oval.
