--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   title: v2.2.0
+    version: 2.2.0
+    commitID: 535ad58e3c4f0eca6d890a08153a969f6b2d5856
 
 -   title: v2.1.8
     version: 2.1.8
