--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
@@ -40,6 +40,11 @@
             "script": "new/new_app_icon.cocoascript"
         },
         {
+            "name": "",
+            "identifier": "new_app_icon_android_o",
+            "script": "new/new_app_icon_android_o.cocoascript"
+        },
+        {
             "name": "导出 PNG 位图资源",
             "identifier": "export_png_assets",
             "script": "export/export_png_assets.cocoascript"
@@ -121,6 +126,7 @@
             "new_nine_patch_asset",
             "new_vector_drawable_asset",
             "new_app_icon",
+            "new_app_icon_android_o",
             "-",
             "export_png_assets",
             "export_nine_patch",
