--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -2,7 +2,7 @@ description: Export Android resources, like pngs, nine-patch, app icon and vecto
 new_png_asset: New PNG Asset
 new_nine_patch_asset: New Nine-Patch Asset
 new_app_icon: New App Icon
-new_app_icon_android_o: New App Icon (Android O)
+new_app_icon_legacy: New App Icon (Legacy)
 add_system_icon: Add System Icon Grid Line
 new_vector_drawable_asset: New Vector Drawable Asset
 export_png_assets: Export PNG Assets
@@ -64,6 +64,7 @@ no_duplicate_and_invaild_asset_name: No duplicate and invaild asset name.
 
 select_app_icon_artboard: Please selected the app icon artboard or symbol master.
 app_icon_artboard_tips: Your icon must in an artboard or symbol master, and the size must be 192x192px.
+current_page_is_no_template: Current page is no a Android app icon template.
 
 install_imagemagick_title: Please check that you have ImageMagick installed.
 install_imagemagick_message: |-
@@ -93,3 +94,5 @@ no_support_fill_type: The fill type is not support for Android shape drawable.
 no_support_stroke_type: The stroke type is not support for Android shape drawable.
 no_support_shape: Only support shape layer like rectangle or oval.
 no_shape_layer: Please choose one shape layer like rectangle or oval.
+
+template_no_exists: Template file "%1" is no exists.
