--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -72,6 +72,11 @@
             "script": "export/export_shape_xml.cocoascript"
         },
         {
+            "name": "View Code",
+            "identifier": "view_code",
+            "script": "code/window.cocoascript"
+        },
+        {
             "name": "Add System Icon Grid Line",
             "identifier": "add_system_icon",
             "script": "utilities/add_system_icon.cocoascript"
@@ -139,6 +144,8 @@
             "export_vector_drawable",
             "export_app_icon",
             "export_shape_xml",
+            "-",
+            "view_code",
             "-",
             {
                 "title": "Utilities",
